0.5.1/_sources/gallery/magic_viewer.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/magic_viewer.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_magic_viewer.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_magic_viewer.py:


magicgui viewer
===============

Example showing how to access the current viewer from a function widget.

.. tags:: gui

.. GENERATED FROM PYTHON SOURCE LINES 9-26



.. image-sg:: /gallery/images/sphx_glr_magic_viewer_001.png
   :alt: magic viewer
   :srcset: /gallery/images/sphx_glr_magic_viewer_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    import napari


    # annotating a paramater as `napari.Viewer` will automatically provide
    # the viewer that the function is embedded in, when the function is added to
    # the viewer with add_function_widget.
    def my_function(viewer: napari.Viewer):
        print(viewer, f'with {len(viewer.layers)} layers')


    viewer = napari.Viewer()
    # Add our magic function to napari
    viewer.window.add_function_widget(my_function)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_magic_viewer.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: magic_viewer.ipynb <magic_viewer.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: magic_viewer.py <magic_viewer.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: magic_viewer.zip <magic_viewer.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
